# GPR924-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: warnings.cmake
common/: CMakeLists.txt
common/include/engine/: engine.h  gui.h  renderer.h  system.h  window.h
common/include/network/: adler32.h  client_interface.h  network_manager.h
common/include/renderer/: framebuffer.h  pipeline.h  shader.h  texture.h  vertex_input.h
common/include/rollback/: checksum.h  input_manager.h  rollback_manager.h
common/include/utils/: observer.h
common/src/: empty.cc
common/src/engine/: engine.cc  (+3 more)
common/test/: test_adler32.cc  test_engine.cc  test_gl.cc  test_input_manager.cc  test_network.cc  test_renderer.cc  test_rollback.cc
core/: CMakeLists.txt
core/include/: vec4.h
core/include/container/: indexed_container.h  small_vector.h
core/include/maths/: angle.h  constant.h  fixed.h  geometry.h  matrix2.h  matrix3.h  matrix4.h  vec2.h  vec3.h  vec4.h
core/include/physics/: quadtree.h
core/include/resource/: resource.h
core/test/: test_angle.cc  test_empty.cc  test_fixed.cc  test_indexed_container.cc  test_matrix.cc  test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_quadtree.cc  test_resource.cc  test_small_vector.cc  test_vec2.cc  test_vec3.cc  test_vec4.cc
physics/: CMakeLists.txt
physics/include/: body.h  collision.h  contact_listener.h  quadtree.h  shapes.h  world.h
physics/samples/: CMakeLists.txt  main.cc
physics/samples/include/: bounce_sample.h  colliders_sample.h  samples_browser.h  solar_sample.h
physics/samples/src/: bounce_sample.cc  colliders_sample.cc  samples_browser.cc  solar_sample.cc
physics/src/: body.cc  collision.cc  quadtree.cc  world.cc
physics/test/: test_body.cc  test_collision.cc  test_world.cc
physics/utils/: CMakeLists.txt
physics/utils/include/: quadtree_debug_draw.h  rendered_object.h  sample.h
physics/utils/src/: quadtree_debug_draw.cpp
(+6 files in other folders)
